just fixed the layout, it shows without horizotal scrollbar

--- a/src/app/stock/stock-list/stock-list.component.css
+++ b/src/app/stock/stock-list/stock-list.component.css
@@ -2,3 +2,14 @@
   /*text-decoration: underline;*/
   color: purple;
 }
+
+.ui-datatable {
+  width: 100%;
+  table-layout: auto;
+}
+
+.ui-datatable table {
+  border-collapse: collapse;
+  width: 100%;
+  table-layout: initial;
+}
